<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>monocular_vo</name>
    <version>1.0.0</version>
    <description>Simple Monocular Visual Odometry implementation.</description>
    <maintainer email="goktug@leodrive.ai">LeoDrive.ai</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <exec_depend>ament_index_python</exec_depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
